...

            promptingStyle = PromptingStyle.SingleLanguageOnly
        )
    ),

    ModelData(
        name = "English-74 (slower, more accurate)",
        sizeBytes = 81_781_811,

        ggml = ModelDataGGML(
            is_builtin_asset = false,
            ggml_file = "base_en_acft_q8_0.bin",
            digest = "e9b4b7b81b8a28769e8aa9962aa39bb9f21b622cf6a63982e93f065ed5caf1c8"
...
            ),

            promptingStyle = PromptingStyle.LanguageTokenAndAction
        )
    ),
    ModelData(
        name = "Multilingual-74 (default)",
        sizeBytes = 81_768_602,

        ggml = ModelDataGGML(
            is_builtin_asset = false,
            ggml_file = "base_acft_q8_0.bin",
            digest = "e44f352c9aa2c3609dece20c733c4ad4a75c28cd9ab07d005383df55fa96efc4"
...
